# ROOT_GUI

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  MicroDefinatonList.df  PRex_Pedestal.txt  README  README.md  configure  makefile  setup.sh
Debug/: General_Make  makefile  sources.mk
DecoderMPD4_VME/: GEMDataParserM4V.cpp  GEMDataParserM4V.h  GEMDataParserM4VLinkDef.h  RawDecoderM4V.cpp  RawDecoderM4V.h  datastructureM4V.h
GEMDecoder/: APVCrossTalkSearch.cpp  APVCrossTalkSearch.h  input_handler.cpp  input_handler.h  raw_decoder.cpp  raw_decoder.h
GEMDetector/: GEMConfigure.cpp  GEMConfigure.h  GEMEventData.h  GEMIDGenerator.h  GEMInforCenter.cpp  GEMInforCenter.h  GEMStructure.h  GEMUIDGenerator.h  MPDDecoder.cpp  MPDDecoder.h  MPDRawParser.cpp  MPDRawParser.h  MPDStructure.h
GUIDialog/: GUIHelpDialog.h  UserGUIHRSOpticsWizard.cpp  UserGUIHRSOpticsWizard.h  UserGUIHelpDialog.cpp  UserGUIHelpDialog.h  UserGUIMapWizard.cpp  UserGUIMapWizard.h  UserGUIToolDialog.cpp  UserGUIToolDialog.h  UserGUIWorkStatus.cpp  UserGUIWorkStatus.h
HRSOptics/: HRSOpticsCut.cpp  HRSOpticsCut.h  HRSOpticsGeneral.cpp  HRSOpticsGeneral.h  HRSOpticsInfor.cpp  HRSOpticsInfor.h  HRSOpticsLog.cpp  HRSOpticsLog.h  UserGUIHRSOpticsWizard.cpp  UserGUIHRSOpticsWizard.h
Mapping/: 3GEM_5MPD_Mapping.cfg  prex_rhrs.cfg  prex_rhrs_focalplane.cfg  temp_Mapping.cfg  temp_Mapping.cfg-RW  temp_Mapping.cfg.org  temp_Mapping_2ndHalf.cfg  temp_Mapping_4Chamber.cfg  temp_Mapping_4mpd.cfg  temp_Mapping_4thChamber.cfg  temp_Mapping_full.cfg  temp_Mapping_secondmpd.cfg
Run_scrips/: shell.sh  step_run.sh
analysis/: Config.h  GEMAnalysis.cpp  GEMAnalysis.h  GEMCalibration.cpp  GEMCalibration.h  GEMCluster.cxx  GEMCluster.h  GEMEffAnalysis.cpp  GEMEffAnalysis.h  GEMEvent.cpp  GEMEvent.h  GEMEventParser.cpp  GEMEventParser.h  GEMFittingShape.h  GEMHistoManager.h  GEMHit.cxx  GEMHit.h  GEMLayer.cpp  GEMLayer.h  GEMModule.cpp  GEMModule.h  GEMPerformanceAnalysis.cpp  GEMPerformanceAnalysis.h  GEMStructure.h  GEMSystem.cpp  GEMSystem.h  GEMTCluster.cxx  GEMTCluster.h  GEMTrackConstrcution.cpp  GEMTrackConstrcution.h  GEMTracking.C  GEMTracking.h  GEMTree.C  GEMTree.h  GEMTreeGenerator.cxx  GEMTreeGenerator.h
analysislib/: makefile
analyzerlib/: readme.md
backup/: GEMInforCenter.cpp
cfg/: DetConfig.cfg  GEMConfig.cfg  GUIConfig.cfg
config/: gem.cfg
database/: OLDgem_map_uva_eel_2crates_layer1234.cfg  gem_infn_1mpd.cfg  gem_infn_1mpd0.cfg  gem_map.cfg  gem_map_eel_4gems.cfg  gem_map_infn.cfg  gem_map_infn_4_layer.cfg  gem_map_infn_j0.cfg  gem_map_infn_j00.cfg  gem_map_infn_j0_3.cfg  gem_map_infn_j0_3_invert.cfg  gem_map_infn_j0_correct.cfg  gem_map_infn_j0_correct_layer.cfg  gem_map_infn_j0_correct_test.cfg  gem_map_infn_j0_gem0.cfg  gem_map_infn_j1.cfg  gem_map_infn_j2.cfg  gem_map_infn_test.cfg  gem_map_prex_test.cfg  gem_map_uva_eel.cfg  gem_map_uva_eel_2crates_layer1234.cfg  gem_map_uva_eel_2crates_layer1234_New.cfg  gem_map_uva_eel_3crates_layer12345.cfg  gem_map_uva_eel_3crates_layer5.cfg  gem_test.cfg  singleModuleMap.cfg  test.cfg  test_tongtong.cfg  uva_threeGEM.cfg
decoder/: GEMDataStruct.h
detector/: DetInforCenter.cpp  DetInforCenter.h  DetStructure.h  GEMSystem.cpp  GEMSystem.h  JLabEvioPaser.cpp  RawDecoder.cpp  RawDecoder.h
dev_plan/: dev_plan.md  dp_theta_optimize_parameters.md  rawmode_id_defination.md
env_set/: README.md  env_check.sh  evio_install.sh  libconfig_install.sh  required_env  required_package  root_install.sh  setup.sh
examples/: makefile
gem/: GEMConfigure.h  GEMStructure.h  MPDDecoder.cpp  MPDDecoder.h  MPDRawParser.cpp  MPDStructure.h
gui/: UserRootGUI.cpp  UserRootGUI.h
issues/: issues.md
msg/: SysMsgCenter.cpp  SysMsgCenter.h  SysMsgStructure.h
root_gui/: GUIConfigure.cpp  GUIConfigure.h  GUIDialogInforCenter.cpp  GUIDialogInforCenter.h  GUIHelpDialog.cpp  GUIInformation.cpp  GUIInformation.h  GUIMainFrame.cpp  GUIMainFrame.h  GUIMapWizard.cpp  GUIMapWizard.h  GUISignalSlot.cpp  GUISignalSlot.h  GUIStructure.h  GUISysGeneral.cpp  GUISysGeneral.h  GUISysStatus.cpp  GUISysStatus.h
src/: Benchmark.cpp  Benchmark.h  ConfigInfor.cpp  ConfigInfor.h  EventStructure.h  GEMInforCenter.cpp  GEMInforCenter.h  GEMStructue.h  GUIInforCenter.cpp  GUIInforCenter.h  GlobalStructure.h  ROOT_GUI.cpp  ThreadInterface.cpp  ThreadInterface.h  UserGUIConfigure.cpp  UserGUIConfigure.h  UserGUIDataStructue.h  UserGUIKeyProcess.cpp  UserGUIKeyProcess.h  UserGuiGeneralDialogProcess.cpp  UserGuiGeneralDialogProcess.h  UserGuiMainFrame.cpp  UserGuiMainFrame.h  UserGuiMainFrameLinkDef.h  input_handler.cxx  raw_decoder.cxx
(+55 files in other folders)
